# Infrastructure/jpa/src/main/java/com/school/infrastructure/jpa/enums/UserRoles.java
@@ -1,0 +1,20 @@
+package com.school.infrastructure.jpa.enums;
+
+import lombok.Getter;
+
+@Getter
+public enum UserRoles {
+  ADMIN("admin"),
+
+  DOCTOR("doctor"),
+
+  PATIENT("patient"),
+
+  STAFF("staff");
+
+  private String value;
+
+  UserRoles(String value) {
+    this.value = value;
+  }
+}
